move search outside of island on mobile reviewers (bug 839541)

--- a/media/css/devreg/reviewers.less
+++ b/media/css/devreg/reviewers.less
@@ -1328,6 +1328,44 @@ iframe#manifest-contents {
             }
         }
     }
+    #queue-search {
+        padding: 0;
+        margin: 26px 0 6px;
+        label[for="id_text_query"] {
+            display: none;
+        }
+        input#id_text_query {
+            display: inline-block;
+            margin-right: 5px;
+            margin-top: 0;
+            width: 75%;
+        }
+        .button {
+            height: 36px;
+            margin-top: 0px;
+            max-width: 22%;
+            min-width: 0%;
+            margin-right: 0;
+            top: 8px;
+            span {
+                bottom: 9px;
+                font-size: 16px;
+                position: relative;
+            }
+        }
+        #toggle-queue-search {
+            bottom: 64px;
+            float: right;
+            font-size: 16px;
+            line-height: 6px;
+            margin-right: 3px;
+            position: relative;
+
+        }
+    }
+    .island #queue-search {
+        display: none;
+    }
     #reviewers-score-bar {
         display: none;
     }
